fix: swagger and ci
